--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
       color: white;
       padding: 20px;
       text-align: center;
+    <img src="images/Vitapath.png" alt="Vitapath Logo" style="height: 50px; vertical-align: middle;">
+  <h1 style="display: inline-block; margin-left: 10px;">Vitapath</h1>
+
     }
 
     nav {
